--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="hero-head">
 			<nav class="navbar">
 				<div class="container">
-					<div class="navbar-menu">
+					<div class="navbar-menu is-active">
 						<div class="navbar-end">
 							<span class="navbar-item">
 								<a class="button" href="https://lukaszkulacz.github.io/">
@@ -38,9 +38,11 @@
 								</a>
 							</span>
 						</div>
+						
 					</div>
 				</div>
 			</nav>
+			
 		</div>
 		
 		<div class="hero-body">
@@ -64,13 +66,13 @@
 				</div>
 			</div>
 		</div>
-	<footer class="footer">
-		<div class="content has-text-centered">
-		<p>
-			<strong>Recipes</strong> by <a href="https://github.com/LukaszKulacz">Łukasz Kułacz</a>
-		</p>
-		</div>
-	</footer>	
+		<div class="hero-foot">
+			<div class="content has-text-centered">
+			<p>
+				<strong>Recipes</strong> by <a href="https://github.com/LukaszKulacz">Łukasz Kułacz</a>
+			</p>
+			</div>
+		</div>	
 	
 	</section>
 	
